--- a/MyPgpDemo/Properties/launchSettings.json
+++ b/MyPgpDemo/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "GeneradeKeyPair",
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -19,7 +19,7 @@
     "MyPgpDemo": {
       "commandName": "Project",
       //"launchBrowser": true,
-      //"launchUrl": "GeneradeKeyPair",
+      //"launchUrl": "",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
