--- a/PGPEncrypto/PGPEncryption.csproj
+++ b/PGPEncrypto/PGPEncryption.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,10 +6,6 @@
 
   <ItemGroup>
     <PackageReference Include="Portable.BouncyCastle" Version="1.8.8" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\PGPEncrypto\PGPEncryption.csproj" />
   </ItemGroup>
 
 </Project>
